--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
     - name: Test with flake8
       run: |
         python -m flake8
+        python -m pytest
 
   send_message:
     runs-on: ubuntu-latest
@@ -30,4 +31,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }} успешно выполнен!
+        message: Тесты пройдены!
